# genesis-core

./: .gitignore  .gitmodules  CMakeLists.txt  GenesisEmulator_Frontend.html  genesis-core.js
include/: genesis.h
src/: apu.cpp  bus.cpp  core_api.cpp  genesis.cpp  m68k.cpp  vdp.cpp  z80.cpp
